Add loading and user not found mensages

--- a/public/index.html
+++ b/public/index.html
@@ -20,52 +20,9 @@
                 <!-- <button type="submit">Adicionar</button> -->
             </form>
         </header>
+        <div id="loading-status" class="loading-status"><h3></h3></div>
         <ul id="repo-list" class="repo-list">
-            <li>
-                <img src="https://avatars0.githubusercontent.com/u/22770413?v=4" alt="">
-                <strong><a href="#">Nome do Repositório</a></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat.</p>
-            </li>
-            <li>
-                <img src="https://avatars0.githubusercontent.com/u/22770413?v=4" alt="">
-                <strong><a href="#">Nome do Repositório</a></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat.</p>
-            </li>
-            <li>
-                <img src="https://avatars0.githubusercontent.com/u/22770413?v=4" alt="">
-                <strong><a href="#">Nome do Repositório</a></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat.</p>
-            </li>
-            <li>
-                <img src="https://avatars0.githubusercontent.com/u/22770413?v=4" alt="">
-                <strong><a href="#">Nome do Repositório</a></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat.</p>
-            </li>
-            <li>
-                <img src="https://avatars0.githubusercontent.com/u/22770413?v=4" alt="">
-                <strong><a href="#">Nome do Repositório</a></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat.</p>
-            </li>
-            <li>
-                <img src="https://avatars0.githubusercontent.com/u/22770413?v=4" alt="">
-                <strong><a href="#">Nome do Repositório</a></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat.</p>
-            </li>
-            <li>
-                <img src="https://avatars0.githubusercontent.com/u/22770413?v=4" alt="">
-                <strong><a href="#">Nome do Repositório</a></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat.</p>
-            </li>
-            <li>
-                <img src="https://avatars0.githubusercontent.com/u/22770413?v=4" alt="">
-                <strong><a href="#">Nome do Repositório</a></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat.</p>
-            </li>
-            <li>
-                <img src="https://avatars0.githubusercontent.com/u/22770413?v=4" alt="">
-                <strong><a href="#">Nome do Repositório</a></strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat.</p>
-            </li>
+            
         </ul>
     </div>
     <script src="./bundle.js"></script>
